Fix reveal.js so the the presentation is visible.

--- a/python_testing_tools/reveal.js/css/reveal.css
+++ b/python_testing_tools/reveal.js/css/reveal.css
@@ -3,7 +3,7 @@
  * http://lab.hakim.se/reveal-js
  * MIT licensed
  *
- * Copyright (C) 2015 Hakim El Hattab, http://hakim.se
+ * Copyright (C) 2016 Hakim El Hattab, http://hakim.se
  */
 /*********************************************
  * RESET STYLES
@@ -1336,7 +1336,3 @@ html:-moz-full-screen-ancestor {
 
 .zoomed .reveal .roll span:after {
   visibility: hidden; }
-
-.reveal code {
-  font-size: 80%;
-}
